<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <view
        android:id="@+id/page_form_component_host"
        class="hidaka.kotlinstudy.todo.ui_component.PageFormComponent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/page_new_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_black_24dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>